src/assets/main.css
:root {
	--header-height: 3.5rem;
}

*, ::before, ::after {
	padding: 0;
	margin: 0;
	box-sizing: border-box;
	transition: all 0.2s ease;
}

@keyframes fade-in {
	from {
		opacity: 0;
	} to {
		opacity: 1;
	}
}

body {
	animation: fade-in 0.75s ease;
	min-height: calc(100vh - var(--header-height));
	background: #0f0f0f;
	font-family: sans-serif;
	color: #f3f3f3;
	margin-top: var(--header-height);
}

#app {
	min-height: calc(100vh - var(--header-height));
	display: flex;
	flex-direction: column;
	padding: 1rem 1.5rem;
}

header {
	position: fixed;
	top: 0;
	left: 0;
	height: var(--header-height);
	width: 100%;
	font-size: 1.125rem;
	color: #f3f3f3;
	box-shadow: 0 0 12px #0008;
	padding: 0 1rem;
	display: grid;
	grid-template-rows: 100%;
}

header a {
	display: flex;
	justify-content: center;
	align-items: center;
	color: #f3f3f3;
	text-align: center;
	text-decoration: none !important;
}

main {
	flex-grow: 1;
	padding-bottom: 0.25em;
	width: 70%;
}

footer {
	border-top: 1px solid #cdcdcd;
	padding-top: 0.75em;
}

section:not(:first-child) {
	margin-top: 1rem;
}

h1, h2, h3, h4, h5, h6 {
	font-weight: 600;
	line-height: 1.2;
	margin-bottom: 0.5rem;
}

h1 {
	font-size: 1.75rem;
}

h2 {
	font-size: 1.5rem;
}

h3 {
	font-size: 1.25rem;
}

h4 {
	font-size: 1rem;
}

h5 {
	font-size: 0.75rem;
}

h6 {
	font-size: 0.5rem;
}

p {
	line-height: 1.5;
	margin-bottom: 1rem;
}

ul, ol {
	list-style: none;
	padding: 0;
}

ul > li, ol > li {
	padding: 0.25rem 0.75rem;
	margin-left: 1rem;
}

button {
	color: #f3f3f3;
	border: none;
	padding: 0.5rem 1rem;
	border-radius: 0.25rem;
	cursor: pointer;
}

a {
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}

